refactor: Change threading policy to 'on main thread unless noted otherwise', general refactoring