@@ -12,15 +12,19 @@ import android.media.session.PlaybackState;
 import android.os.Handler;
 import android.os.Looper;
 import app.morphe.extension.music.patches.scrobbling.lastfm.LastFM;
-import app.morphe.extension.music.patches.scrobbling.lastfm.LastFMTokenStore;
 import app.morphe.extension.music.patches.scrobbling.listenbrainz.ListenBrainz;
 import app.morphe.extension.music.settings.Settings;
 import app.morphe.extension.shared.Logger;
+import app.morphe.extension.shared.Utils;
 
+/**
+ * All methods must be called on main thread.
+ */
 public class ScrobbleManager {
     private static ScrobbleManager instance;
 
-    public static synchronized ScrobbleManager getInstance() {
+    public static ScrobbleManager getInstance() {
+        Utils.verifyOnMainThread();
         if (instance == null) {
             instance = new ScrobbleManager();
         }
@@ -33,26 +37,27 @@ public class ScrobbleManager {
     private String currentArtist;
     private String currentAlbum;
     private String currentSongId;
-    private int currentDuration; // in seconds
+    private int currentDurationSeconds;
 
-    private long songStartedAt; // epoch in seconds
-    private boolean songStarted = false;
+    private long songStartedAtSeconds;
+    private boolean songStarted;
 
     // ListenBrainz Timer State
-    private long lbScrobbleRemainingMillis = 0L;
-    private long lbScrobbleTimerStartedAt = 0L;
-    private boolean lbScrobbled = false;
+    private long lbScrobbleRemainingMillis;
+    private long lbScrobbleTimerStartedAt;
+    private boolean lbScrobbled;
     private Runnable lbRunnable;
 
     // Last.fm Timer State
-    private long lfScrobbleRemainingMillis = 0L;
-    private long lfScrobbleTimerStartedAt = 0L;
-    private boolean lfScrobbled = false;
+    private long lfScrobbleRemainingMillis;
+    private long lfScrobbleTimerStartedAt;
+    private boolean lfScrobbled;
     private Runnable lfRunnable;
 
     private ScrobbleManager() {}
 
-    public synchronized void onSetMetadata(MediaMetadata metadata) {
+    public void onSetMetadata(MediaMetadata metadata) {
+        Utils.verifyOnMainThread();
         if (metadata == null) return;
 
         try {
@@ -63,13 +68,13 @@ public class ScrobbleManager {
             long durationMs = metadata.getLong(MediaMetadata.METADATA_KEY_DURATION);
             int duration = (int) (durationMs / 1000);
 
-            if (title == null || title.trim().isEmpty() || artist == null || artist.trim().isEmpty()) {
+            if (title == null || title.isBlank() || artist == null || artist.isBlank()) {
                 return;
             }
 
             // Check if it is a new song
             if (!title.equals(currentTitle) || !artist.equals(currentArtist)) {
-                Logger.printInfo(() -> "ScrobbleManager: new song detected: " + title + " - " + artist);
+                Logger.printDebug(() -> "ScrobbleManager: new song detected: " + title + " - " + artist);
                 stopTimers();
                 songStarted = false;
                 lbScrobbled = false;
@@ -79,20 +84,21 @@ public class ScrobbleManager {
                 currentArtist = artist;
                 currentAlbum = album;
                 currentSongId = songId;
-                currentDuration = duration;
+                currentDurationSeconds = duration;
             }
-        } catch (Exception e) {
-            Logger.printException(() -> "ScrobbleManager error parsing metadata", e);
+        } catch (Exception ex) {
+            Logger.printException(() -> "onSetMetadata failure", ex);
         }
     }
 
-    public synchronized void onSetPlaybackState(PlaybackState state) {
+    public void onSetPlaybackState(PlaybackState state) {
+        Utils.verifyOnMainThread();
         if (state == null) return;
         boolean isPlaying = state.getState() == PlaybackState.STATE_PLAYING;
         onPlayerStateChanged(isPlaying);
     }
 
-    private synchronized void onPlayerStateChanged(boolean isPlaying) {
+    private void onPlayerStateChanged(boolean isPlaying) {
         if (currentTitle == null || currentArtist == null) return;
 
         if (isPlaying) {
@@ -106,31 +112,31 @@ public class ScrobbleManager {
         }
     }
 
-    private synchronized void onSongStart() {
-        songStartedAt = System.currentTimeMillis() / 1000;
+    private void onSongStart() {
+        songStartedAtSeconds = System.currentTimeMillis() / 1000;
         songStarted = true;
 
         // ListenBrainz
         if (Settings.LISTENBRAINZ_SCROBBLING.get()) {
             startListenBrainzTimer();
             if (Settings.LISTENBRAINZ_NOW_PLAYING.get()) {
-                ListenBrainz.updateNowPlayingAsync(currentArtist, currentTitle, currentSongId, currentAlbum, currentDuration);
+                ListenBrainz.updateNowPlayingAsync(currentArtist, currentTitle, currentSongId, currentAlbum, currentDurationSeconds);
             }
         }
 
         // Last.fm
         if (Settings.LASTFM_SCROBBLING.get()) {
-            String sk = LastFMTokenStore.retrieveSessionKey();
-            if (sk != null && !sk.trim().isEmpty()) {
+            String sk = Settings.LASTFM_SESSION_KEY.get();
+            if (!sk.isBlank()) {
                 startLastFMTimer();
                 if (Settings.LASTFM_NOW_PLAYING.get()) {
-                    LastFM.updateNowPlaying(sk, currentArtist, currentTitle, currentAlbum, currentDuration);
+                    LastFM.updateNowPlaying(sk, currentArtist, currentTitle, currentAlbum, currentDurationSeconds);
                 }
             }
         }
     }
 
-    private synchronized void onSongResume() {
+    private void onSongResume() {
         // ListenBrainz
         if (Settings.LISTENBRAINZ_SCROBBLING.get() && !lbScrobbled && lbScrobbleRemainingMillis > 0) {
             cancelListenBrainzRunnable();
@@ -140,8 +146,8 @@ public class ScrobbleManager {
 
         // Last.fm
         if (Settings.LASTFM_SCROBBLING.get() && !lfScrobbled && lfScrobbleRemainingMillis > 0) {
-            String sk = LastFMTokenStore.retrieveSessionKey();
-            if (sk != null && !sk.trim().isEmpty()) {
+            String sk = Settings.LASTFM_SESSION_KEY.get();
+            if (!sk.isEmpty()) {
                 cancelLastFMRunnable();
                 lfScrobbleTimerStartedAt = System.currentTimeMillis();
                 scheduleLastFMScrobble(lfScrobbleRemainingMillis);
@@ -149,24 +155,25 @@ public class ScrobbleManager {
         }
     }
 
-    private synchronized void onSongPause() {
+    private void onSongPause() {
         if (!songStarted) return;
         pauseTimers();
     }
 
-    private synchronized void startListenBrainzTimer() {
+    private void startListenBrainzTimer() {
         cancelListenBrainzRunnable();
 
-        int minSongDuration = Settings.LISTENBRAINZ_MIN_SONG_DURATION.get();
-        if (currentDuration <= minSongDuration) {
-            Logger.printInfo(() -> "ListenBrainz: duration " + currentDuration + "s <= minimum " + minSongDuration + "s, skipping scrobble");
+        final int minSongDuration = Settings.LISTENBRAINZ_MIN_SONG_DURATION.get();
+        if (currentDurationSeconds <= minSongDuration) {
+            Logger.printDebug(() -> "ListenBrainz: duration " + currentDurationSeconds
+                    + "s <= minimum " + minSongDuration + "s, skipping scrobble");
             return;
         }
 
-        float delayPercent = Settings.LISTENBRAINZ_DELAY_PERCENT.get() / 100.0f;
-        int delaySeconds = Settings.LISTENBRAINZ_DELAY_SECONDS.get();
+        final float delayPercent = Settings.LISTENBRAINZ_DELAY_PERCENT.get() / 100.0f;
+        final int delaySeconds = Settings.LISTENBRAINZ_DELAY_SECONDS.get();
 
-        long thresholdMs = (long) (currentDuration * 1000L * delayPercent);
+        final long thresholdMs = (long) (currentDurationSeconds * 1000L * delayPercent);
         lbScrobbleRemainingMillis = Math.min(thresholdMs, (long) delaySeconds * 1000L);
 
         if (lbScrobbleRemainingMillis <= 0) {
@@ -178,19 +185,20 @@ public class ScrobbleManager {
         scheduleListenBrainzScrobble(lbScrobbleRemainingMillis);
     }
 
-    private synchronized void startLastFMTimer() {
+    private void startLastFMTimer() {
         cancelLastFMRunnable();
 
-        int minSongDuration = Settings.LASTFM_MIN_SONG_DURATION.get();
-        if (currentDuration <= minSongDuration) {
-            Logger.printInfo(() -> "Last.fm: duration " + currentDuration + "s <= minimum " + minSongDuration + "s, skipping scrobble");
+        final int minSongDuration = Settings.LASTFM_MIN_SONG_DURATION.get();
+        if (currentDurationSeconds <= minSongDuration) {
+            Logger.printDebug(() -> "Last.fm: duration " + currentDurationSeconds
+                    + "s <= minimum " + minSongDuration + "s, skipping scrobble");
             return;
         }
 
-        float delayPercent = Settings.LASTFM_DELAY_PERCENT.get() / 100.0f;
-        int delaySeconds = Settings.LASTFM_DELAY_SECONDS.get();
+        final float delayPercent = Settings.LASTFM_DELAY_PERCENT.get() / 100.0f;
+        final int delaySeconds = Settings.LASTFM_DELAY_SECONDS.get();
 
-        long thresholdMs = (long) (currentDuration * 1000L * delayPercent);
+        final long thresholdMs = (long) (currentDurationSeconds * 1000L * delayPercent);
         lfScrobbleRemainingMillis = Math.min(thresholdMs, (long) delaySeconds * 1000L);
 
         if (lfScrobbleRemainingMillis <= 0) {
@@ -202,7 +210,7 @@ public class ScrobbleManager {
         scheduleLastFMScrobble(lfScrobbleRemainingMillis);
     }
 
-    private synchronized void pauseTimers() {
+    private void pauseTimers() {
         // ListenBrainz
         cancelListenBrainzRunnable();
         if (lbScrobbleTimerStartedAt != 0L) {
@@ -217,7 +225,7 @@ public class ScrobbleManager {
         // Last.fm
         cancelLastFMRunnable();
         if (lfScrobbleTimerStartedAt != 0L) {
-            long elapsed = System.currentTimeMillis() - lfScrobbleTimerStartedAt;
+            final long elapsed = System.currentTimeMillis() - lfScrobbleTimerStartedAt;
             lfScrobbleRemainingMillis -= elapsed;
             if (lfScrobbleRemainingMillis < 0) {
                 lfScrobbleRemainingMillis = 0;
@@ -226,7 +234,7 @@ public class ScrobbleManager {
         }
     }
 
-    private synchronized void stopTimers() {
+    private void stopTimers() {
         cancelListenBrainzRunnable();
         lbScrobbleRemainingMillis = 0L;
         lbScrobbleTimerStartedAt = 0L;
@@ -238,20 +246,16 @@ public class ScrobbleManager {
 
     private void scheduleListenBrainzScrobble(long delayMs) {
         lbRunnable = () -> {
-            synchronized (ScrobbleManager.this) {
-                scrobbleListenBrainz();
-                lbRunnable = null;
-            }
+            scrobbleListenBrainz();
+            lbRunnable = null;
         };
         handler.postDelayed(lbRunnable, delayMs);
     }
 
     private void scheduleLastFMScrobble(long delayMs) {
         lfRunnable = () -> {
-            synchronized (ScrobbleManager.this) {
-                scrobbleLastFM();
-                lfRunnable = null;
-            }
+            scrobbleLastFM();
+            lfRunnable = null;
         };
         handler.postDelayed(lfRunnable, delayMs);
     }
@@ -270,17 +274,19 @@ public class ScrobbleManager {
         }
     }
 
-    private synchronized void scrobbleListenBrainz() {
+    private void scrobbleListenBrainz() {
         if (lbScrobbled) return;
-        ListenBrainz.scrobbleAsync(currentArtist, currentTitle, songStartedAt, currentSongId, currentAlbum, currentDuration);
+        ListenBrainz.scrobbleAsync(currentArtist, currentTitle, songStartedAtSeconds,
+                currentSongId, currentAlbum, currentDurationSeconds);
         lbScrobbled = true;
     }
 
-    private synchronized void scrobbleLastFM() {
+    private void scrobbleLastFM() {
         if (lfScrobbled) return;
-        String sk = LastFMTokenStore.retrieveSessionKey();
-        if (sk != null && !sk.trim().isEmpty()) {
-            LastFM.scrobble(sk, currentArtist, currentTitle, currentAlbum, currentDuration, songStartedAt);
+        String sk = Settings.LASTFM_SESSION_KEY.get();
+        if (!sk.isBlank()) {
+            LastFM.scrobble(sk, currentArtist, currentTitle, currentAlbum,
+                    currentDurationSeconds, songStartedAtSeconds);
         }
         lfScrobbled = true;
     }
